--- a/Adventure/Views/Shared/_Layout.cshtml
+++ b/Adventure/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="~/Content/flaticon.css">
     <link rel="stylesheet" href="~/Content/icomoon.css">
     <link rel="stylesheet" href="~/Content/style.css">
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+
 </head>
 <body>
 
