--- a/Adventure/Views/Login/Login_Layout.cshtml
+++ b/Adventure/Views/Login/Login_Layout.cshtml
@@ -48,7 +48,7 @@
                         @Html.ActionLink("主页", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     </li>
                     <li class="nav-item">
-                        @Html.ActionLink("关于我们", "AboutUS", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        @Html.ActionLink("关于我们", "About", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("体验活动", "Index", "Activity", new { area = "" }, new { @class = "navbar-brand" })
@@ -57,7 +57,7 @@
                         @Html.ActionLink("民宿", "Index", "Homestay", new { area = "" }, new { @class = "navbar-brand" })
                     </li>
                     <li class="nav-item">
-                        @Html.ActionLink("旅行故事", "Index", "Story", new { area = "" }, new { @class = "navbar-brand" })
+                        @Html.ActionLink("旅行故事", "Index", "Blog", new { area = "" }, new { @class = "navbar-brand" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "navbar-brand" })
@@ -104,7 +104,7 @@
                                 @Html.ActionLink("主页", "Index", "Home", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
                             <li>
-                                @Html.ActionLink("关于我们", "AboutUS", "Home", new { area = "" }, new { @class = "py-2 d-block" })
+                                @Html.ActionLink("关于我们", "About", "Home", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
                             <li>
                                 @Html.ActionLink("体验活动", "Index", "Activity", new { area = "" }, new { @class = "py-2 d-block" })
@@ -113,10 +113,10 @@
                                 @Html.ActionLink("民宿", "Index", "Homestay", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
                             <li>
-                                @Html.ActionLink("旅行故事", "Index", "Story", new { area = "" }, new { @class = "py-2 d-block" })
+                                @Html.ActionLink("旅行故事", "Index", "Blog", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
                             <li>
-                                @Html.ActionLink("联系我们", "Index", "Contact", new { area = "" }, new { @class = "py-2 d-block" })
+                                @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
                             @if (Session["user"] == null)
                             {
