--- a/Adventure/Views/Register/Index.cshtml
+++ b/Adventure/Views/Register/Index.cshtml
@@ -22,7 +22,7 @@
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3 form-box">
 
-                                <form role="form" action="" method="post" class="registration-form">
+                                <form role="form" action="@Url.Action("AddUser")" method="post" class="registration-form">
 
                                     <fieldset>
                                         <div class="form-top">
@@ -111,6 +111,10 @@
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-google-plus">国家</label>
                                                 <input type="text" name="form-google-plus" placeholder="Your Country..." class="form-control" id="form-country">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="sr-only" for="form-google-plus">语言</label>
+                                                <input type="text" name="form-google-plus" placeholder="Your Language..." class="form-control" id="form-language">
                                             </div>
                                             <button type="button" class="btn btn-previous">上一页</button>
                                             <button type="submit" class="btn btn-register">提交注册</button>
