--- a/Adventure/Views/Login/Index.cshtml
+++ b/Adventure/Views/Login/Index.cshtml
@@ -6,6 +6,61 @@
     function turnToRegister() {
         window.location.href = "/Register";
     }
+    function loginCheck() {
+        var next_step = true;
+        //用户名验证：(数字字母或下划线6到20位)
+        var reUser = /^\w{6,20}$/;
+
+        $(this).find('input[type="text"], input[type="password"], textarea').each(function () {
+            if ($(this).val() == "") {
+                e.preventDefault();
+                $(this).addClass('input-error');
+                next_step = false;
+            }
+            else {
+                $(this).removeClass('input-error');
+            }
+        });
+        var originPasswd = $("#form-password").val();
+        var repeatPasswd = $("#form-repeat-password").val();
+        if (originPasswd != repeatPasswd) {
+            alert("两次密码输入不一致！");
+            $("#form-repeat-password").addClass('input-error');
+            $("#form-password").addClass('input-error');
+            next_step = false;
+        } else if (!reUser.test($("#form-username").val())) {
+            $("#form-username").addClass('input-error');
+            alert("用户名输入有误！");
+            next_step = false;
+        }
+        if (next_step) {
+            $.ajax({
+                type: "post",
+                url: "Login/CheckLogin",
+                data: {
+                    userID: $("#form-username").val(),
+                    userpwd: $("#form-password").val(),
+                },
+                async: false,
+                dataType: 'json',
+                success: function (d) {
+                    if (d.Result == '0') {//登录成功  
+                        //location.href = 'DataMain.aspx?logper=' + $("#ipt_username").find("option:selected").text();
+                        alert("登陆成功！欢迎探索Adventure");
+                        //location.href = 'Home/Index';
+                    }
+                    else {
+                        //登录失败                
+                        alert("登陆失败!请检查用户名密码！");
+                    }
+                },
+                error: function (a) {
+                    console.log(a); alert("登陆失败!请检查用户名密码！");
+                }
+            });
+        }
+
+    }
 </script>
 
 <div class="hero-wrap js-fullheight" style="background-image: url('../images/Login_bg.jpg');">
@@ -50,7 +105,7 @@
                                                        class="form-repeat-password form-control" id="form-repeat-password">
                                             </div>
                                             <button type="button" class="btn btn-previous" onclick="turnToRegister()">注册</button>
-                                            <button type="submit" class="btn btn-login">提交登陆</button>
+                                            <button type="button" class="btn" onclick="loginCheck()">提交登陆</button>
                                         </div>
                                     </fieldset>
                                 </form>
